added initial implementation of POST /restaurants/orders/{id}/accept endpoint
